--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,12 @@
 @import "tailwindcss";
-
 @theme inline {
   --font-display: "Poppins", sans-serif;
   --color-primary-500: oklch(0.84 0.18 117.33);
   --spacing: 0.25rem;
 }
 body {
-  font-family: "Poppins", sans-serif;
-  background-color: #0f172a;
+  font-family: "Poppins", "Huiwen-mincho", sans-serif;
+  background-color: #fff;
   background-image: radial-gradient(
       at 0% 0%,
       rgba(99, 102, 241, 0.15) 0,
