--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,16 @@ body {
   min-height: 100vh;
 }
 
+.bg-rgd {
+  background-color: #fff;
+  background-image: radial-gradient(
+      at 0% 0%,
+      rgba(99, 102, 241, 0.15) 0,
+      transparent 50%
+    ),
+    radial-gradient(at 100% 0%, rgba(6, 182, 212, 0.15) 0, transparent 50%),
+    radial-gradient(at 50% 100%, rgba(244, 63, 94, 0.15) 0, transparent 50%);
+}
 #root {
   height: 100vh;
 }
